--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,10 +1,12 @@
 form div.fieldlist {
   display: flex;
   flex-direction: column;
+  margin-top: 20px;
   gap: 20px;
 }
 form div.fieldlist div {
   display: flex;
+  gap: 10px;
   align-items: center;
 }
 form div.fieldlist div label {
@@ -15,18 +17,18 @@ form input, form textarea, form button, form select {
   font-size: 18px;
   padding: 10px;
 }
-form input, form textarea {
-  border: 2px solid #666;
+form input, form textarea, form select {
+  border: 1px solid #666;
 }
-form input[type=checkbox], form textarea[type=checkbox] {
+form input[type=checkbox], form textarea[type=checkbox], form select[type=checkbox] {
   transform: scale(1.5);
   margin-right: 10px;
   cursor: pointer;
 }
-form input::-moz-placeholder, form textarea::-moz-placeholder {
+form input::-moz-placeholder, form textarea::-moz-placeholder, form select::-moz-placeholder {
   color: #BBB;
 }
-form input::placeholder, form textarea::placeholder {
+form input::placeholder, form textarea::placeholder, form select::placeholder {
   color: #BBB;
 }
 form button {
@@ -114,7 +116,7 @@ html, body {
 html {
   box-sizing: border-box;
   font-family: "Inter", sans-serif;
-  font-size: 16px;
+  font-size: 18px;
   color: #222;
   scroll-behavior: smooth;
 }
