--- a/public/scss/inc/_contact-form.scss
+++ b/public/scss/inc/_contact-form.scss
@@ -19,6 +19,7 @@ form {
         display: flex;
         flex-direction: column;
         // flex-wrap: wrap;
+        margin-top: 20px;
         gap: 20px;
         // width: 50%;
         // margin-left: auto;
@@ -30,7 +31,7 @@ form {
             // }
             // padding: 0;
             display: flex;
-            // gap: 20px;
+            gap: 10px;
             align-items: center;
             // justify-content: space-between;
             label {
@@ -44,8 +45,8 @@ form {
         font-size: 18px;
         padding: 10px;
     }
-    input, textarea {
-        border: 2px solid #666;
+    input, textarea, select {
+        border: 1px solid #666;
         // &:not([type=checkbox]) {
         //     width: 100%;
         // }
