--- a/public/scss/inc/_totop-btn.scss
+++ b/public/scss/inc/_totop-btn.scss
@@ -15,8 +15,8 @@
     // box-shadow: 0px 0px 10px #FFF;
     transition: bottom 0.3s ease;
     &:before {
-        font-family: "wt_media_events";
-        font-size: 40px;
+        font-family: "aanmelden_wtgroup";
+        font-size: 30px;
         color: #FFF;
         content: '\e800';
     }
