--- a/public/scss/styles.scss
+++ b/public/scss/styles.scss
@@ -98,7 +98,8 @@ header {
 }
 
 .contentWrapper {
-    min-height: 2000px;
+    // min-height: 2000px;
+    margin-bottom: 200px;
     margin-left: auto;
     margin-right: auto;
     max-width: 1100px;
@@ -132,4 +133,5 @@ footer {
     background-color: $colorBlack;
     min-height: 150px;
     color: #FFF;
+    padding-bottom: 250px;
 }
