--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,19 +1,39 @@
+form {
+  padding-top: 20px;
+}
 form div.fieldlist {
   display: flex;
   flex-direction: column;
   margin-top: 20px;
   gap: 20px;
+  padding-left: 10%;
+}
+@media (max-width: 768px) {
+  form div.fieldlist {
+    padding-left: 20px;
+  }
 }
 form div.fieldlist > div {
   display: flex;
   gap: 10px;
   align-items: center;
 }
+@media (max-width: 768px) {
+  form div.fieldlist > div {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+}
 form div.fieldlist > div.dieetWensen {
   align-items: flex-start;
 }
 form div.fieldlist > div label {
   flex: 0 0 200px;
+}
+@media (max-width: 768px) {
+  form div.fieldlist > div label {
+    flex: 0 0 auto;
+  }
 }
 form input, form textarea, form button, form select {
   font-family: "Inter", sans-serif;
@@ -188,6 +208,8 @@ header > picture img {
   height: 500px;
   -o-object-fit: cover;
      object-fit: cover;
+  -o-object-position: center bottom;
+     object-position: center bottom;
   animation: scaleZoom 40s linear infinite;
 }
 
@@ -232,5 +254,9 @@ footer {
   background-color: #222;
   min-height: 150px;
   color: #FFF;
+  text-align: center;
+  padding-top: 10px;
   padding-bottom: 250px;
+  padding-left: 20px;
+  padding-right: 20px;
 }/*# sourceMappingURL=styles.css.map */
