--- a/public/scss/inc/_contact-form.scss
+++ b/public/scss/inc/_contact-form.scss
@@ -15,12 +15,17 @@ form {
         //     text-align: center;
         // }
     // }
+    padding-top: 20px;
     div.fieldlist {
         display: flex;
         flex-direction: column;
         // flex-wrap: wrap;
         margin-top: 20px;
         gap: 20px;
+        padding-left: 10%;
+        @media (max-width: $sbp3_tablet) {
+            padding-left: 20px;
+        }
         // width: 50%;
         // margin-left: auto;
         // margin-right: auto;
@@ -31,6 +36,10 @@ form {
             // }
             // padding: 0;
             display: flex;
+            @media (max-width: $sbp3_tablet) {
+                flex-direction: column;
+                align-items: flex-start;
+            }
             gap: 10px;
             align-items: center;
             &.dieetWensen {
@@ -40,6 +49,9 @@ form {
             label {
                 // flex-basis: 200px;
                 flex: 0 0 200px;
+                @media (max-width: $sbp3_tablet) {
+                    flex: 0 0 auto;
+                }
             }
         }
     }
