--- a/public/scss/styles.scss
+++ b/public/scss/styles.scss
@@ -81,7 +81,7 @@ header {
             width: 100%;
             height: 500px;
             object-fit: cover;
-            // object-position: center bottom;
+            object-position: center bottom;
             animation: scaleZoom 40s linear infinite;
         }
     }
@@ -133,5 +133,9 @@ footer {
     background-color: $colorBlack;
     min-height: 150px;
     color: #FFF;
+    text-align: center;
+    padding-top: 10px;
     padding-bottom: 250px;
+    padding-left: 20px;
+    padding-right: 20px;
 }
