--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -76,6 +76,11 @@ form .dietRadioGroup > div {
   gap: 5px;
   align-items: flex-start;
 }
+@media (max-width: 480px) {
+  form .dietRadioGroup textarea {
+    width: 100%;
+  }
+}
 
 form input.snare, form textarea.snare {
   display: none;
