--- a/public/scss/inc/_contact-form.scss
+++ b/public/scss/inc/_contact-form.scss
@@ -101,6 +101,7 @@ form {
         textarea {
             @media (max-width: $sbp4_mobile) {
                 width: 95%;
+                margin-right: 20px;
             }
         }
     }
