--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -79,6 +79,7 @@ form .dietRadioGroup > div {
 @media (max-width: 480px) {
   form .dietRadioGroup textarea {
     width: 95%;
+    margin-right: 20px;
   }
 }
 
