--- a/public/scss/inc/_contact-form.scss
+++ b/public/scss/inc/_contact-form.scss
@@ -100,7 +100,8 @@ form {
         }
         textarea {
             @media (max-width: $sbp4_mobile) {
-                margin-right: 20px;
+                width: 90%;
+                // margin-right: 20px;
             }
         }
     }
