--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -133,13 +133,13 @@ form .error span {
   align-items: center;
   justify-content: center;
   position: fixed;
-  right: 40px;
+  right: 10px;
   bottom: -80px;
   z-index: 102;
   cursor: default;
   background-color: #006878;
-  width: 60px;
-  height: 60px;
+  width: 50px;
+  height: 50px;
   border-radius: 50%;
   text-decoration: none;
   box-shadow: 0px 0px 10px #FFF;
@@ -147,12 +147,15 @@ form .error span {
 }
 #toTop:before {
   font-family: "aanmelden_wtgroup";
-  font-size: 30px;
+  font-size: 25px;
   color: #FFF;
   content: "\e800";
+  position: absolute;
+  left: 13px;
+  top: 8px;
 }
 #toTop.show {
-  bottom: 40px;
+  bottom: 10px;
 }
 #toTop:hover {
   box-shadow: 0px 0px 20px #AAA;
